--- a/js_refresher/index.html
+++ b/js_refresher/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script defer src="./index.js"></script>
+        <!-- 'defer' attribute makes the script to be executed BEFORE DOM is loaded -->
     </head>
 
     <body>
